--- a/example/example.html
+++ b/example/example.html
@@ -14,11 +14,11 @@
 				//relative file paths matching is enabled by default
 				window.include("file1.js");
 			}
-			//absolute paths using the "$(root)" url token
+			//paths using the "$(root)" url token
 			else {
-				window.includer.set_root(/*should be set to an absolute path to your project files root*/".");
-				window.includer.set_file_urls_relative_path_matching(true);
-				window.include("$(root)/file1.js");//and use the "$(fs_root)" token with every "include(...), ALSO in included files"
+				window.includer.set_root(/*should be set to an absolute or relative path to your project files root*/".");
+				window.includer.set_file_urls_relative_path_matching(true || false);
+				window.include("$(root)/file1.js");//use the "$(root)" token in every "include(...) directive"
 			}
 		</script>
 	</head>
